# Text2Query

./: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  supervisord.conf
backend/: pyproject.toml  run.py
backend/app/: main.py
backend/app/core/: config.py  dependencies.py  exceptions.py  logger.py
backend/app/db/: database.py  redis.py
backend/app/middleware/: auth.py  logging.py
backend/app/models/: ___init__.py  databases.py  history.py  users.py
backend/app/repositories/: databases_repo.py  history_repo.py  users_repo.py
backend/app/route/: auth_routes.py  db_routs.py  history_routes.py  sql_routes.py
backend/app/schemas/: auth.py  history.py  sql.py  users_db.py
backend/app/services/: connection_db_service.py  llm_service.py  query_servece.py
backend/app/utils/: crypto_utils.py  jwt.py  mail_utils.py  pas_hashing.py
backend/migrations/: env.py
backend/migrations/versions/: 35cac53e260f_.py  9ec27518660e_changing_the_token_exp_time_column_type.py
frontend/: auth.html  index.html  verify.html  workshop.html
frontend/css/: style.css
frontend/js/: core.js  main.js  pages.js
