[project]
name = "text2query"
version = "0.1.0"
description = "A project for creating SQL queries based on user input, with the ability to connect to the user's database and export results in various formats."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]
